# django-oauth2-basic-integrated

./: .gitignore  Dockerfile  Makefile  README.md  add_cloudflare_ips.sh  docker-compose.yml  pyproject.toml  uwsgi.ini
nginx/: nginx.conf
nginx/conf.d/: proxy.conf  server.conf  server80.conf
nginx/conf.d/site-enabled/: pgadmin4_80.conf  redis-management_80.conf
src/: test.py
src/libs/middlewares/: global_request.py  request.py
src/libs/random/: generators.py
src/main/: settings.py  urls.py  views.py
src/social_auth/: serializers.py  urls.py  views.py
src/social_auth/providers/facebook/: utils.py
src/social_auth/providers/google/: constants.py  utils.py
